--- a/global.css
+++ b/global.css
@@ -1,12 +1,22 @@
 body {
-  width: 75%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 0;
   text-align: justify; }
-  body .article h1 {
-    text-align: center; }
-  body .article p {
-    text-indent: 2em; }
+  body .content {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto; }
+    body .content .article {
+      width: 100%; }
+      body .content .article h1 {
+        text-align: center; }
+      body .content .article p {
+        text-indent: 2em; }
+  body .footer {
+    background-color: black;
+    height: 15em;
+    margin-top: 1vh; }
 
 .header {
   width: 100%;
@@ -22,62 +32,77 @@ body {
     flex-wrap: wrap;
     text-align: center; }
   .header a.nav-bar-item:hover {
-    background-color: rgba(255, 255, 255, 0.849);
+    /*background-color:rgba(255, 255, 255, 0.849);*/
     border-radius: 10px;
-    color: linear-gradient(indigo 0%, purple 100%); }
+    /*color:$nav-background;*/
+    text-decoration: underline solid 3px rgba(255, 255, 255, 0.849); }
   .header a.nav-bar-item {
+    color: rgba(255, 255, 255, 0.849);
     font-weight: bold;
     font-family: Verdana, sans-serif;
     position: relative;
     display: inline-block;
-    width: 150px;
+    width: auto;
     height: 100%;
-    padding: 20px; }
+    padding: 20px;
+    text-decoration: none; }
   .header .nav-bar-title {
+    margin-left: 2em;
     width: 150px;
     height: 50px;
-    align-self: center; }
+    align-self: center;
+    font-family: 'Bahnschrift',serif; }
+    .header .nav-bar-title a {
+      text-decoration: none;
+      color: inherit; }
   .header .search-bar {
     text-align: right;
-    width: auto;
+    width: 100%;
     display: inline-block; }
     .header .search-bar form {
-      width: 300px;
+      width: 100%;
       margin-top: 10px; }
-      .header .search-bar form textarea {
-        width: 150px;
-        height: 1.5em;
+      .header .search-bar form input {
+        border: 0;
+        color: white;
+        background-color: grey;
+        width: 100%;
+        height: 2.5em;
         font-family: Verdana, sans-serif;
         font-style: italic;
-        resize: none; }
+        resize: none;
+        text-indent: 1em; }
       .header .search-bar form button {
-        width: 1.5em;
-        height: 1.5em; }
+        visibility: hidden;
+        position: absolute; }
 
 html {
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  overflow-x: hidden; }
 
-@media (max-width: 1500px) {
-  body {
-    width: 100%; }
-    body article h1 {
-      text-align: center; }
-
-  .nav-bar-title {
-    width: 100%; }
-
-  p, h1 {
-    padding-left: 1em;
-    padding-right: 1em; } }
 @media (max-width: 700px) {
   body {
     width: 100%; }
 
-  .nav-bar-item {
+  .header .nav-bar {
+    display: block;
     width: 100%; }
-
-  .nav-bar-title {
+  .header a.nav-bar-item:hover {
+    background-color: rgba(255, 255, 255, 0.849);
+    border-radius: 0;
+    color: indigo;
+    text-decoration: none; }
+  .header a.nav-bar-item {
+    width: 100%;
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0; }
+  .header .search-bar form input {
+    padding-left: 0;
+    padding-right: 0; }
+  .header .nav-bar-title {
+    width: auto;
     text-align: center;
     margin-left: auto;
     margin-right: auto; } }
