--- a/global.scss
+++ b/global.scss
@@ -1,12 +1,19 @@
 $nav-background:linear-gradient(indigo 0%,purple 100%);
 $sans-serif:Verdana,sans-serif;
-
+// *{
+//     outline:solid 2px red;
+// }
 body{
-    width:75%;
     margin-left:auto;
     margin-right:auto;
+    margin-top:0;
     text-align:justify;
+    .content{
+        width:75%;
+        margin-left:auto;
+        margin-right:auto;
     .article{
+        width:100%;
         h1{
             text-align:center;
         }
@@ -14,6 +21,12 @@ body{
             text-indent:2em;
             }
     }
+}
+.footer{
+    background-color:black;
+    height:15em;
+    margin-top:1vh;
+}
 }
 .header{
     width:100%;
@@ -30,41 +43,54 @@ body{
         text-align:center;
     }
     a.nav-bar-item:hover{
-        background-color:rgba(255, 255, 255, 0.849);
+        /*background-color:rgba(255, 255, 255, 0.849);*/
         border-radius:10px;
-        color:$nav-background;
+        /*color:$nav-background;*/
+        text-decoration:underline solid 3px rgba(255,255,255,0.849);
     }
     a.nav-bar-item{
+        color:rgba(255,255,255,0.849);
         font-weight:bold;
         font-family:$sans-serif;
         position:relative;
         display:inline-block;
-        width:150px;
+        width:auto;
         height:100%;
         padding:20px;
+        text-decoration:none;
     }
     .nav-bar-title{
+        margin-left:2em;
         width:150px;
         height:50px;
         align-self:center;
+        font-family:'Bahnschrift',serif;
+        a{
+            text-decoration:none;
+            color:inherit;
+        }
     }
     .search-bar{
         text-align:right;
-        width:auto;
+        width:100%;
         display:inline-block;
         form{
-            width:300px;
+            width:100%;
             margin-top:10px;
-        textarea{
-            width:150px;
-            height:1.5em;
+        input{
+            border:0;
+            color:white;
+            background-color:grey;
+            width:100%;
+            height:2.5em;
             font-family:$sans-serif;
             font-style:italic;
             resize:none;
+            text-indent:1em;
         }
         button{
-            width:1.5em;
-            height:1.5em;
+            visibility:hidden;
+            position:absolute;
         }
     }
     }
@@ -72,35 +98,43 @@ body{
 html{
     height:100%;
     width:100%;
+    overflow-x:hidden;
 }
 
-@media(max-width:1500px){
-    body{
-        width:100%;
-        article{
-            h1{
-                text-align:center;
-            }
-        }
-    }
-    .nav-bar-title{
-        width:100%;
-    }
-    p, h1{
-        padding-left:1em;
-        padding-right:1em;
-    }
-}
 @media(max-width:700px){
     body{
         width:100%;
     }
-.nav-bar-item{
-    width:100%;
-}
-.nav-bar-title{
-    text-align:center;
-    margin-left:auto;
-    margin-right:auto;
-}
+    .header{
+        .nav-bar{
+            display:block;
+            width:100%;
+        }
+        a.nav-bar-item:hover{
+            background-color:rgba(255, 255, 255, 0.849);
+            border-radius:0;
+            color:indigo;
+            text-decoration:none;
+        }
+        a.nav-bar-item{
+            width:100%;
+            margin:0;
+            padding-left:0;
+            padding-right:0;
+        }
+        .search-bar{
+            form{
+                input{
+                    padding-left:0;
+                    padding-right:0;
+                }
+            }
+        }
+        .nav-bar-title{
+            width:auto;
+            text-align:center;
+            margin-left:auto;
+            margin-right:auto;
+        }
+    }
 }
