--- a/global.scss
+++ b/global.scss
@@ -101,7 +101,7 @@ html{
     overflow-x:hidden;
 }
 
-@media(max-width:700px){
+@media(max-width:700px) and (max-device-width:700px){
     body{
         width:100%;
     }
