--- a/global.css
+++ b/global.css
@@ -105,6 +105,7 @@ html {
     width: auto;
     text-align: center;
     margin-left: auto;
-    margin-right: auto; } }
+    margin-right: auto;
+    margin-top: 2em; } }
 
 /*# sourceMappingURL=global.css.map */
