--- a/global.scss
+++ b/global.scss
@@ -135,6 +135,7 @@ html{
             text-align:center;
             margin-left:auto;
             margin-right:auto;
+            margin-top:2em;
         }
     }
 }
