--- a/global.scss
+++ b/global.scss
@@ -1,141 +1,158 @@
-$nav-background:linear-gradient(indigo 0%,purple 100%);
-$sans-serif:Verdana,sans-serif;
+$nav-background: linear-gradient(indigo 0%, purple 100%);
+$sans-serif: Verdana, sans-serif;
+$border: solid 2px black;
 // *{
 //     outline:solid 2px red;
 // }
-body{
-    margin-left:auto;
-    margin-right:auto;
-    margin-top:0;
-    text-align:justify;
-    .content{
-        width:75%;
-        margin-left:auto;
-        margin-right:auto;
-    .article{
-        width:100%;
-        h1{
-            text-align:center;
+body {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    text-align: justify;
+    .header {
+        width: 100%;
+        background-image: $nav-background;
+        display: flex;
+        margin: 0;
+        flex-wrap: wrap;
+        align-content: center;
+        .nav-bar {
+            width: auto;
+            height: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            text-align: center;
         }
-        p{
-            text-indent:2em;
+        a.nav-bar-item:hover {
+            /*background-color:rgba(255, 255, 255, 0.849);*/
+            border-radius: 10px;
+            /*color:$nav-background;*/
+            text-decoration: underline solid 3px rgba(255, 255, 255, 0.849);
+        }
+        a.nav-bar-item {
+            color: rgba(255, 255, 255, 0.849);
+            font-weight: bold;
+            font-family: $sans-serif;
+            position: relative;
+            display: inline-block;
+            width: auto;
+            height: 100%;
+            padding: 20px;
+            text-decoration: none;
+        }
+        .nav-bar-title {
+            margin-left: 2em;
+            width: 150px;
+            height: 50px;
+            align-self: center;
+            font-family: "Bahnschrift", serif;
+            a {
+                text-decoration: none;
+                color: inherit;
             }
-    }
-}
-.footer{
-    background-color:black;
-    height:15em;
-    margin-top:1vh;
-}
-}
-.header{
-    width:100%;
-    background-image:$nav-background;
-    display:flex;
-    margin:0;
-    flex-wrap:wrap;
-    align-content:center;
-    .nav-bar{
-        width:auto;
-        height:100%;
-        display:flex;
-        flex-wrap:wrap;
-        text-align:center;
-    }
-    a.nav-bar-item:hover{
-        /*background-color:rgba(255, 255, 255, 0.849);*/
-        border-radius:10px;
-        /*color:$nav-background;*/
-        text-decoration:underline solid 3px rgba(255,255,255,0.849);
-    }
-    a.nav-bar-item{
-        color:rgba(255,255,255,0.849);
-        font-weight:bold;
-        font-family:$sans-serif;
-        position:relative;
-        display:inline-block;
-        width:auto;
-        height:100%;
-        padding:20px;
-        text-decoration:none;
-    }
-    .nav-bar-title{
-        margin-left:2em;
-        width:150px;
-        height:50px;
-        align-self:center;
-        font-family:'Bahnschrift',serif;
-        a{
-            text-decoration:none;
-            color:inherit;
         }
-    }
-    .search-bar{
-        text-align:right;
-        width:100%;
-        display:inline-block;
-        form{
-            width:100%;
-            margin-top:10px;
-        input{
-            border:0;
-            color:white;
-            background-color:grey;
-            width:100%;
-            height:2.5em;
-            font-family:$sans-serif;
-            font-style:italic;
-            resize:none;
-            text-indent:1em;
-        }
-        button{
-            visibility:hidden;
-            position:absolute;
-        }
-    }
-    }
-}
-html{
-    height:100%;
-    width:100%;
-    overflow-x:hidden;
-}
-
-@media(max-width:700px) and (max-device-width:700px){
-    body{
-        width:100%;
-    }
-    .header{
-        .nav-bar{
-            display:block;
-            width:100%;
-        }
-        a.nav-bar-item:hover{
-            background-color:rgba(255, 255, 255, 0.849);
-            border-radius:0;
-            color:indigo;
-            text-decoration:none;
-        }
-        a.nav-bar-item{
-            width:100%;
-            margin:0;
-            padding-left:0;
-            padding-right:0;
-        }
-        .search-bar{
-            form{
-                input{
-                    padding-left:0;
-                    padding-right:0;
+        .search-bar {
+            text-align: right;
+            width: 100%;
+            display: inline-block;
+            form {
+                width: 100%;
+                margin-top: 10px;
+                input {
+                    border: 0;
+                    color: white;
+                    background-color: grey;
+                    width: 100%;
+                    height: 2.5em;
+                    font-family: $sans-serif;
+                    font-style: italic;
+                    resize: none;
+                    text-indent: 1em;
+                }
+                button {
+                    visibility: hidden;
+                    position: absolute;
                 }
             }
         }
-        .nav-bar-title{
-            width:auto;
-            text-align:center;
-            margin-left:auto;
-            margin-right:auto;
-            margin-top:2em;
+    }
+    .content {
+        width: 95%;
+        margin-left: 20px;
+        margin-right: 20px;
+        .content_container {
+            background: rgba(255,255,255,0.3);
+            box-shadow: 3em;
+            article {
+                width: 100%;
+                .article_img {
+                    width: 500px;
+                    text-align: center;
+                    img {
+                        margin-left:auto;
+                        margin-right:auto;
+                        width: 55%;
+                        border: $border;
+                        border-radius: 3px;
+                    }
+                }
+            }
+        }
+    }
+    .footer {
+        background-color: black;
+        height: 15em;
+        margin-top: 1vh;
+    }
+}
+
+html {
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+}
+h1 {
+    text-align: center;
+}
+p {
+    text-indent: 2em;
+}
+
+@media (max-width: 700px) and (max-device-width: 700px) {
+    body {
+        width: 100%;
+    }
+    .header {
+        .nav-bar {
+            display: block;
+            width: 100%;
+        }
+        a.nav-bar-item:hover {
+            background-color: rgba(255, 255, 255, 0.849);
+            border-radius: 0;
+            color: indigo;
+            text-decoration: none;
+        }
+        a.nav-bar-item {
+            width: 100%;
+            margin: 0;
+            padding-left: 0;
+            padding-right: 0;
+        }
+        .search-bar {
+            form {
+                input {
+                    padding-left: 0;
+                    padding-right: 0;
+                }
+            }
+        }
+        .nav-bar-title {
+            width: auto;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 2em;
         }
     }
 }
